# multi-agent-decision

./: CITATION.cff  README.md  environment.yml  pyproject.toml
multi_agent_decision/: __init__.py  simulation.py
