[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-decision"
version = "0.4"
description = "A Python library for simulating the actions which agents take under multi-agent systems and social networks."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ankur Tutlani", email = "ankur.tutlani@gmail.com" }
]
keywords = ["game theory" , "evolutionary game", "multi-agent systems" , "social network" , "simulation" , "agent-based modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.0",
    "pandas>=3.0",
    "matplotlib>=3.5",
    "networkx>=3.0",
    "pillow>=10.0",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/ankur-tutlani/multi-agent-decision"
Repository = "https://github.com/ankur-tutlani/multi-agent-decision"
Documentation = "https://github.com/ankur-tutlani/multi-agent-decision"
"Bug Tracker" = "https://github.com/ankur-tutlani/multi-agent-decision/issues"

[tool.setuptools]
packages = ["multi_agent_decision"]
